--- a/index.html
+++ b/index.html
@@ -21,13 +21,63 @@
             voluptatem accusantium adipisci? Aliquam maxime veniam tempora incidunt iusto numquam, laborum nesciunt, nulla alias aperiam,
              corrupti provident! Earum?</p>
 
-        <div class="Seattle box"></div>
-        <div class="Paris box"></div>
-        <div class="Dubai box"></div>
-        <div class="Tokyo box"></div>
-        <div class="Lima box"></div>
+    <div class="Seattle box"></div>
+    <div class="Paris box"></div>
+    <div class="Dubai box"></div>
+    <div class="Tokyo box"></div>
+    <div class="Lima box"></div>
+
+    <div class="box1" >
+        <img src="img/chinook.jpg" style=" width:  500px;
+        height: 500px;">
+        <p class="seattle-paragraph">Seattle Branche
+            <br>Seattle@gmail.com
+            <br>079xxxxxx
+        </p>
+    </div>
+    <div class="box2" >
+        <img src="img/shirt.jpg" style=" width:  500px;
+        height: 500px;">
+        <p class="seattle-paragraph">Tokyo Branche
+            <br>Tokyo@gmail.com
+            <br>079xxxxxx
+        </p>
+    </div>
+    <div class="box3">
+        <img src="img/frosted-cookie.jpg" style=" width:  500px;
+        height: 500px;">
+        <p class="seattle-paragraph">Dubai Branche
+            <br>Dubai@gmail.com
+            <br>079xxxxxx
+        </p>
+    </div>
+    <div class="box4" >
+        <img src="img/family.jpg" style=" width:  500px;
+        height: 500px;">
+        <p class="seattle-paragraph">Paris Branche
+            <br>Paris@gmail.com
+            <br>079xxxxxx
+        </p>
+    </div>
+    <div class="box5" >
+        <img src="img/cutter.jpeg" style=" width:  500px;
+        height: 500px;">
+        <p class="seattle-paragraph">Lami Branche
+            <br>Lami@gmail.com
+            <br>079xxxxxx
+        </p>
+    </div>
+    <div class="box6">
+        <img src="img/cookies.jpg" style=" width:  500px;
+        height: 500px;">
+        <p class="seattle-paragraph">Seattle Branche
+            <br>Seattle@gmail.com
+            <br>079xxxxxx
+        </p>
+    </div>
+    
 
     </main>
-
+    
 </body>
 </html>
